Updated xlwings Jupyter notebook

--- a/tcapy_notebooks/excel_xlwings_with_tcapy.html
+++ b/tcapy_notebooks/excel_xlwings_with_tcapy.html
@@ -13161,6 +13161,10 @@ xlwings addin install
 <li>tcapy dumps charts related to the TCA calculation</li>
 </ul>
 </li>
+<li>xlwings.conf<ul>
+<li>has path to your Python Conda environment, which may need changing, if Anaconda is installed somewhere else</li>
+</ul>
+</li>
 </ul>
 
 </div>
